--- a/package.json
+++ b/package.json
@@ -9,14 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.0",
+    "@types/react-notifications-component": "^3.1.1",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "firebase": "^9.0.0",
     "next": "11.1.0",
+    "pg": "^8.7.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-beforeunload": "^2.5.1",
+    "react-cookie": "^4.1.1",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.14.0",
+    "react-map-gl": "^6.1.16",
+    "react-modal": "^3.14.3",
+    "react-notifications-component": "^3.1.0",
+    "react-query": "^3.21.0",
+    "socket.io-client": "^4.1.3",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/firebase": "^3.2.1",
+    "@types/pg": "^8.6.1",
     "@types/react": "17.0.19",
+    "@types/react-beforeunload": "^2.1.1",
+    "@types/react-modal": "^3.12.1",
+    "@types/uuid": "^8.3.1",
+    "autoprefixer": "^10.3.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.8",
     "typescript": "4.4.2"
   }
 }
