--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.0.1",
     "firebase": "^9.0.0",
     "next": "11.1.0",
+    "nprogress": "^0.2.0",
     "pg": "^8.7.1",
     "react": "17.0.2",
     "react-beforeunload": "^2.5.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/firebase": "^3.2.1",
+    "@types/nprogress": "^0.2.0",
     "@types/pg": "^8.6.1",
     "@types/react": "17.0.19",
     "@types/react-beforeunload": "^2.1.1",
