--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.14.0",
+    "react-loading": "^2.0.3",
     "react-map-gl": "^6.1.16",
     "react-modal": "^3.14.3",
     "react-notifications-component": "^3.1.0",
